# RAG-playground

./: demo_evaluation_report.html  demo_final_results.json
chat-with-your-video-lecture/: README.md  app.py  chunker.py  main.py  pyproject.toml  qa_chain.py  streamlit_app.py  transcriber.py  utils.py  vector_stoer.py
chat-with-your-video-lecture/index/: chroma.sqlite3
customer-support-ticketing-system/: .gitignore  README.md  main.py  pyproject.toml
customer-support-ticketing-system/backend/: README.md  config.py  init_db.py  pyproject.toml  run.py  setup.py
customer-support-ticketing-system/backend/app/: main.py
customer-support-ticketing-system/backend/app/api/: tickets.py
customer-support-ticketing-system/backend/app/database/: chroma_db.py  postgres_db.py
customer-support-ticketing-system/backend/app/models/: tickets.py
customer-support-ticketing-system/backend/app/services/: categorization_service.py  rag_service.py  tickets_service.py
customer-support-ticketing-system/backend/app/utils/: embeddings.py  text_processing.py
demo_knowledge_db/: chroma.sqlite3
enterprise-chunker/: .gitignore  README.md  config.py  dataset_loader.py  evaluation_metrics.py  (+3 more)
hr-onboarding-knowledge-assistant/: README.md  app.py  config.py  ingest.py  pyproject.toml  qa_chain.py
hr-onboarding-knowledge-assistant/vectorstore/: chroma.sqlite3
research-assistant/: .env  .env.example  README.md  main.py  pyproject.toml  setup.py
research-assistant/chroma_db/: chroma.sqlite3
research-assistant/documents/: test_document.txt
research-assistant/research_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research-assistant/src/: __init__.py  assistant.py
research-assistant/src/core/: __init__.py  config.py  exceptions.py  models.py
research-assistant/src/monitoring/: __init__.py  quality_monitor.py
research-assistant/src/search/: __init__.py  document_search.py  hybrid_retriever.py  web_search.py
research-assistant/src/storage/: __init__.py  chroma_store.py  session_manager.py
research-assistant/src/synthesis/: __init__.py  response_synthesizer.py
research-assistant/webapp/: app.py
smart-article-categorizer/: main.py  pyproject.toml
smart-article-categorizer/app/: app.py
smart-article-categorizer/src/: bert_embedding_model.py  classification.py  data_preparation.py  evaluation.py  word2vec_embedding_model.py
(+46 files in other folders)
