[project]
name = "chat-with-your-video-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "openai-whisper>=20250625",
]
