[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "plotly>=6.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
