[project]
name = "smart-article-categorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.0.15",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.2",
    "langchain>=0.3.26",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
]
