[project]
name = "customer-support-ticketing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.41",
]
